# jarvis-spot-price-exporter

./: Cargo.toml  Dockerfile  README.md  spot_price_predictions.json
.github/workflows/: build.yml
helm/jarvis-spot-price-exporter/: Chart.yaml  values.yaml
helm/jarvis-spot-price-exporter/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  role.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml
src/: bigquery_client.rs  exporter_service.rs  main.rs  spot_price_client.rs  state_client.rs  types.rs
