[package]
name = "jarvis-spot-price-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctor = "0.1.22"
env_logger = "0.9.0"
gcp-bigquery-client = "0.9"
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.25" }
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = "0.52"
kube-runtime = "0.52"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
signal-hook = "0.3.13"
tokio = { version = "1.5", features = ["macros"] }
tokio-retry = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
